<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MDP Group 01</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Status: No Status</string>
    <string name="F6">F6</string>
    <string name="F5">F5</string>
    <string name="F4">F4</string>
    <string name="F3">F3</string>
    <string name="F2">F2</string>
    <string name="SwitchAuto">Switch to Auto Controller</string>
    <string name="explore">Explore</string>
    <string name="SwitchManual">Switch to Manual Controller</string>
    <string name="F1">F1</string>
    <string name="manual"><u>Manual Mode</u></string>
    <string name="auto"><u>Auto Mode</u></string>
    <string name="manualMode">Manual Mode</string>
    <string name="autoMode">Auto Mode</string>
    <string name="update">Update</string>
    <string name="Switch">Gesture Settings</string>
    <string name="tvF1">F1</string>
    <string name="tvF2">F2</string>
    <string name="tvF3">Start</string>
    <string name="reset">Reset</string>
    <string name="savePref">Save</string>
    <string name="cancelPref">Cancel</string>
    <string name="startBtn">Start</string>
    <string name="sendStartBtn">Send Start</string>
    <string name="rb_status">Status</string>
    <string name="con_status">Connection</string>
    <string name="rb_timer">Timer</string>
    <string name="setFunctionButton">Set Function Button</string>

    <string name="timer_value">0:00:000</string>


    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">Currently connected</string>
    <string name="title_not_connected">not connected</string>
    <string name="Bluetoothchat">Bluetoothchat</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="insecure_connect">Connect a device (Insecure)</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_ss">SharedPref</string>

</resources>
