<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:switch="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" >

        <TextView
            android:id="@+id/tvF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editF1"
            android:layout_alignBottom="@+id/editF1"
            android:layout_alignParentLeft="true"
            android:text="@string/tvF1" 
            android:textColor="#000"/>

        <TextView
            android:id="@+id/tvF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editF2"
            android:layout_alignParentLeft="true"
            android:text="@string/tvF2" 
            android:textColor="#000"/>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvF2"
            android:layout_marginTop="31dp"
            android:text="@string/tvF3"
            android:textColor="#000" />

        <EditText
            android:id="@+id/editF3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editF2"
            android:layout_alignTop="@+id/TextView01"
            android:background="@android:color/holo_orange_dark"
            android:ems="10" />

        <EditText
            android:id="@+id/editF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editF1"
            android:layout_below="@+id/editF1"
            android:layout_marginTop="39dp"
            android:background="@android:color/holo_orange_dark"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@+id/TextView01"
            android:background="@android:color/holo_orange_dark"
            android:ems="10" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="430dp"
        android:onClick="onSaveBtnClicked"
        android:text="@string/savePref" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_save"
        android:layout_below="@+id/btn_save"
        android:layout_marginTop="19dp"
        android:onClick="onClearBtnClicked"
        android:text="@string/cancelPref" />

</RelativeLayout>